# python-library-template

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.cursor/rules/: template-merging.mdc
.github/: CODEOWNERS  dependabot.yaml  merge-instructions.md
.github/workflows/: __call__build.yaml  __call__checks.yaml  __call__publish.yaml  __call__release.yaml  auto-merge.yaml  publish.yaml  publish.yml  pull-request-check.yaml  release.yaml
src/starforge_library_template/: hello_world.py
starforge_library_template/: __init__.py  __main__.py  hello_world.py
tests/: test-requirements.txt  test_hello_world.py
tests/unit/: test_hello_world.py
